R410-data : Classes du model et tests
