# R401-Architecture_logicielle/pokapi-stub/swagger.json
@@ -1,22 +1,120 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "pokeapi-stub API Documentation",
+    "title": "pokapi-stub API Documentation",
     "description": "",
     "version": "1.0.0"
   },
-  "host": "127.0.0.1:8081/api/v0",
+  "host": "localhost:8080/api/v0",
   "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
-    "/todo": {
+    "/openBooster/{SETID}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "SETID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/getRarestCard": {
       "get": {
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/getMostSearchedCard": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/getBestUsersCollections": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "login": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "login": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
